--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,10 @@ Week1.ipynb
 figures
 notebooks
 
+.DS_Store
+Untitled.ipynb
+ed_week1.ipynb
+ed_week3.ipynb
+gg2_python/
+raw_data_a.rsq
+test_1_0001.dcm
